--- a/.env
+++ b/.env
@@ -4,4 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+#DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+POSTGRES_URL="postgresql://user:pw@localhost:5432/adama?schema=public"
+POSTGRES_PRISMA_URL="postgresql://user:pw@localhost:5432/adama?schema=public"
+POSTGRES_URL_NON_POOLING="postgresql://user:pw@localhost:5432/adama?schema=public"
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="pw"
+POSTGRES_DATABASE="adama"
