--- a/.env
+++ b/.env
@@ -5,9 +5,4 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 #DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
-POSTGRES_URL="postgresql://user:pw@localhost:5432/adama?schema=public"
-POSTGRES_PRISMA_URL="postgresql://user:pw@localhost:5432/adama?schema=public"
-POSTGRES_URL_NON_POOLING="postgresql://user:pw@localhost:5432/adama?schema=public"
-POSTGRES_USER="user"
-POSTGRES_PASSWORD="pw"
-POSTGRES_DATABASE="adama"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/postgres?schema=public"
